--- a/index.html
+++ b/index.html
@@ -2,22 +2,28 @@
 <html>
 
 <head>
-    <title>Aquauauaua</title>
-    <link rel="shortcut icon" type="image/png" href="assets/favicon/favicon2.ico" />
-    <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
-    <link rel='stylesheet' type='text/css' href='https://alator21.github.io/assets/byLibrary/retro-button/retro-button.css'>
-    <script type="text/javascript" src='assets/javascript/p5.min.js'></script>
-    <script type="text/javascript" src='assets/javascript/p5.dom.min.js'></script>
-    <script type="text/javascript" src='assets/javascript/jquery.min.js'></script>
-    <script type="text/javascript" src='assets/javascript/bootstrap.min.js'></script>
-    <script type="text/javascript" src='sketch.js'></script>
-    <script type="text/javascript" src='Boid.js'></script>
-    <script type="text/javascript" src='Nest.js'></script>
-    <script type="text/javascript" src='Fish.js'></script>
-    <script type="text/javascript" src='Trench.js'></script>
-    <script type="text/javascript" src='Brine.js'></script>
-    <script type="text/javascript" src='Fisherman.js'></script>
-    <script type="text/javascript" src='Aquaman.js'></script>
+	<title>Aquauauaua</title>
+	<link rel="shortcut icon" type="image/png" href="assets/favicon/favicon2.ico" />
+	<!-- <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css"> -->
+	<!-- <link rel='stylesheet' type='text/css' href='https://alator21.github.io/assets/byLibrary/retro-button/retro-button.css'> -->
+	<script type="text/javascript" src='assets/javascript/p5.min.js'></script>
+	<script type="text/javascript" src='assets/javascript/p5.dom.min.js'></script>
+	<!-- <script type="text/javascript" src='assets/javascript/jquery.min.js'></script>
+	<script type="text/javascript" src='assets/javascript/bootstrap.min.js'></script> -->
+	<script type="text/javascript" src='sketch.js'></script>
+	<script type="text/javascript" src='Boid.js'></script>
+	<script type="text/javascript" src='Nest.js'></script>
+	<script type="text/javascript" src='Fish.js'></script>
+	<script type="text/javascript" src='Trench.js'></script>
+	<script type="text/javascript" src='Brine.js'></script>
+	<script type="text/javascript" src='Fisherman.js'></script>
+	<script type="text/javascript" src='Aquaman.js'></script>
+	<style>
+		html,
+		body {
+			margin: 0px;
+		}
+	</style>
 </head>
 
 <body>
